Connect to mongodb cloud

--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
   "main": "index.js",
   "license": "MIT",
   "author": "Hudson Graham",
+  "scripts": {
+    "start": "node server.js",
+    "start:pm2": "pm2 start server.js",
+    "stop": "pm2 kill"
+  },
   "dependencies": {
     "graphql": "^15.0.0",
     "koa": "^2.11.0",
     "koa-graphql": "^0.8.0",
-    "koa-mount": "^4.0.0"
+    "koa-mount": "^4.0.0",
+    "mongoose": "^5.9.9",
+    "pm2": "^4.2.3"
   }
 }
