--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "koa": "^2.11.0",
     "koa-graphql": "^0.8.0",
     "koa-mount": "^4.0.0",
+    "minimist": "^1.2.5",
     "mongoose": "^5.9.9",
     "pm2": "^4.2.3"
   }
