--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "stop": "pm2 kill"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "graphql": "^15.0.0",
     "koa": "^2.11.0",
     "koa-graphql": "^0.8.0",
