--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "graphql": "^15.0.0",
     "koa": "^2.11.0",
     "koa-graphql": "^0.8.0",
+    "koa-logger": "^3.2.1",
     "koa-mount": "^4.0.0",
     "minimist": "^1.2.5",
     "mongoose": "^5.9.9",
