--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
+    "eslint": "^6.8.0",
     "graphql": "^15.0.0",
     "koa": "^2.11.0",
     "koa-graphql": "^0.8.0",
