--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "author": "Hudson Graham",
   "scripts": {
     "start": "node server.js",
-    "start:pm2": "pm2 start server.js",
+    "start:pm2": "pm2-runtime start ecosystem.config.js",
     "stop": "pm2 kill"
   },
   "dependencies": {
+    "@koa/cors": "^3.0.0",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "graphql": "^15.0.0",
