--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "koa-mount": "^4.0.0",
     "minimist": "^1.2.5",
     "mongoose": "^5.9.9",
-    "pm2": "^4.2.3"
+    "pm2": "^4.2.3",
+    "react": "16.5.2",
+    "react-dom": "16.5.2"
   },
   "devDependencies": {}
 }
